# ide

./: Cargo.toml  README.md  eslint.config.mjs  justfile  package.json
client/: extension.ts
server/: Cargo.toml
server/src/: backend.rs  main.rs  on_change.rs  semantic.rs  span.rs
vscode/: package.json  pnpm-lock.yaml  tsup.config.ts
vscode/client/: extension.ts  lsp.ts
