[package]
name = "brim-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.41.0", features = ["full"] }
dashmap = "6.1.0"
serde_json = "1.0.132"
tokio-util = "0.7.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
percent-encoding = "2.3.1"
ropey = "1.6.1"
brim = { path = "../../../brim/crates/brim" }
anyhow = "1.0.97"
