[package]
name = "brim-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
brim = { path = "../../../brim/crates/brim" }
dashmap = "6.1.0"
percent-encoding = "2.3.1"
ropey = "1.6.1"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
